test_files/fails/o_arb_delay.ar
// Attemps to move arbitrary data into the future
let rec func : 'a -> 'a signal later = \x -> delay(x :: func x);